<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="@drawable/splashscreen"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_splash_screen"
        app:srcCompat="@drawable/splashscreen"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"/>

    <EditText
        android:id="@+id/txtAppName"
        android:layout_below="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/kenyan_music_app"
        android:textAlignment="center"
        android:textColor="#000002"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="414dp" />

    <TextView
        android:id="@+id/textDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textColor="#f22159"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="372dp"
        tools:layout_editor_absoluteY="476dp" />
</RelativeLayout>